examples/datalog/21_query_features/10_multi_aggregate.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_multi_agg
Knowledge graph 'test_multi_agg' created.
Switched to knowledge graph: test_multi_agg
> .kg use test_multi_agg
Switched to knowledge graph: test_multi_agg
> +sales[("Electronics", 100), ("Electronics", 200), ("Electronics", 150), ("Clothing", 50), ("Clothing", 75), ("Clothing", 60)].
Inserted 6 fact(s) into 'sales'.
> +stats_sum(Cat, <SUM:Amt>) :- sales(Cat, Amt).
Script error: Parse error: Invalid term: '<SUM:Amt>'
